--- a/day2_assmt.html
+++ b/day2_assmt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Job Application page</title>
+<head> <title>Page For Job Application</title>
 <meta charset="UTF-8"></meta> 
 </head>
 <body bgcolor="lightgrey">
